fix header alignment

--- a/githubusercard/src/App.css
+++ b/githubusercard/src/App.css
@@ -377,6 +377,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 h1 {
   font-size: 2.5rem;
+  text-align: center;
 }
 h2 {
   font-size: 2rem;
